--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "^1.24.2"
 matplotlib = "^3.6.3"
 ipython = "^8.9.0"
 ipykernel = "^6.21.1"
+black = "^23.1.0"
 
 [tool.poetry.dev-dependencies]
 jupyter = "1.0.0"
