--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ jupyterlab = "3.5.3"
 jupyterlab-pygments = "0.2.2"
 jupyterlab_server = "2.19.0"
 jupyterlab-widgets = "3.0.5"
-
+seaborn = "^0.12.2"
 
 [build-system]
 requires = ["poetry-core"]
