--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ matplotlib = "^3.6.3"
 ipython = "^8.9.0"
 ipykernel = "^6.21.1"
 black = "^23.1.0"
+llvmlite = "^0.39.1"
+scikit-lego = "^0.6.14"
 
 [tool.poetry.dev-dependencies]
 jupyter = "1.0.0"
