--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,9 @@ black = "^23.1.0"
 llvmlite = "^0.39.1"
 scikit-lego = "^0.6.14"
 optuna = "^3.1.0"
+torch = "^1.13.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 jupyter = "1.0.0"
 jupyter_client = "8.0.2"
 jupyter-console = "6.4.4"
@@ -34,7 +35,8 @@ jupyterlab_server = "2.19.0"
 jupyterlab-widgets = "3.0.5"
 seaborn = "^0.12.2"
 pydot = "^1.4.2"
-
+torchview = "^0.2.6"
+graphviz = "^0.20.1"
 
 [build-system]
 requires = ["poetry-core"]
