--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ llvmlite = "^0.39.1"
 scikit-lego = "^0.6.14"
 optuna = "^3.1.0"
 torch = "^1.13.1"
+lightning = "^1.9.3"
+pytorch-lightning = "^1.9.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "1.0.0"
